# research_ws

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/beginner_tutorials/: listener
devel/lib/pc_preprocessing/: example  outputPc
devel/lib/pkgconfig/: beginner_tutorials.pc  get_sensor_data.pc  ls.pc  pc_preprocessing.pc  robertC.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/get_sensor_data/cmake/: get_sensor_dataConfig.cmake
devel/share/ls/cmake/: lsConfig.cmake
devel/share/pc_preprocessing/cmake/: pc_preprocessingConfig.cmake
devel/share/robertC/cmake/: robertCConfig.cmake
src/MaskR-CNN/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/beginner_tutorials/src/: listener.cpp~
src/get_sensor_data/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/get_sensor_data/pancho0220/: CMakeLists.txt  pcTocv.cpp
src/get_sensor_data/src/: ReductPcd.cpp  ReductPcd2.cpp  cloudtorange.cpp  clustering.cpp  clustering.cpp~  downsampling.cpp  downsampling.cpp ~  getKinectdata.cpp  pcTocv.cpp  pcTocv.cpp~  test.cpp  test.cpp ~  test.cpp~  testVScode.cpp  visualization.cpp
src/ls/: CMakeLists.txt
src/pc_preprocessing/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/pc_preprocessing/pcddata/: cloud_cluster_3.pcd
src/pc_preprocessing/src/: example.cpp  example.cpp~  outputPc.cpp~
src/robertC/: CMakeLists.txt
src/robertC/src/: 2-1.cpp  2-1.cpp~  4-5.cpp
